# Aletheia

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  meaningful_pr.py  pyproject.toml
data/sample/: berlin_sample.json
docs/: replication.md
proofs/: theorems.tex
python/alethia/: __init__.py  allocator.py  simulator.py  zk_interface.py
python/tests/: test_simulator.py
zk/sample_proofs/: sample.proof
